# ProyectoMEDISYNC2

./: .env  .env.demo  .env.example  COLORES_ESTANDARIZADOS.md  Diagramas_BaseDatos_MEDISYNC_20250812_173056.docx  Documentacion_BaseDatos_MEDISYNC_20250812_172221.docx  Documentacion_Detallada_MEDISYNC_20250812_164846.docx  Documentacion_MEDISYNC_20250812_164738.docx  MEDISYNC.py  MEDISYNC_backup_20250810_151137.py  MEDISYNC_backup_20250811_230327.py  MEJORAS_PANEL_ACCIONES.md  README.md  REDISENO_FACTURACION_COMPLETADO.md  RUN_MEDISYNC.py  SOLUCION_EMAIL_COMPLETO.md  SOLUCION_SCROLLBAR_ACCIONES.md  billing_module.py  billing_system_complete.py  billing_system_final.py  database_manager.py  fix_button_colors.py  new_billing_tab.py  patient_registration_form.py  pyproject.toml  pytest.ini  requirements.txt  reset_passwords.py  setup_tables.py  simple_database_manager.py  ui_theme.py  update_colors.py
database/: medisync.db  medisync_backup_20250722_091825.db  medisync_backup_seguros_20250722_141836.db  medisync_temp.db
